fix(dashboard): improve map display on mobile and use global colors

--- a/src/pages/dashboard/charts/map.scss
+++ b/src/pages/dashboard/charts/map.scss
@@ -1,3 +1,5 @@
+@import '../../../scss/breakpoints.scss';
+
 .map-contents {
   position: relative;
 }
@@ -38,6 +40,18 @@
 
 .map-legend {
   position: absolute;
-  top: 42px;
-  left: 0;
+  top: 62px;
+  right: 20px;
+  @media screen and (max-width: $viewport-sm) {
+    top: 40px;
+    right: 5px;
+  }
+  &.choropleth {
+    top: 82px;
+    @media screen and (max-width: $viewport-sm) {
+      top: 40px;
+    }
+  }
+  .bubble {
+  }
 }
